# FlashcardFactory

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  devpost.md  docker-compose.yml  flashcard-factory.service  index.css  install_service.sh  pyproject.toml  requirements.txt  run_docker.sh  server.py
output/StrategyPatternInClassExercise_pages/: page_001.txt  page_002.txt  page_003.txt  page_004.txt  page_005.txt  page_006.txt  page_007.txt  page_008.txt  page_009.txt  page_010.txt  page_011.txt  page_012.txt  page_013.txt  page_014.txt  page_015.txt  page_016.txt  (+7 more)
public/: flashcards.txt  sample.txt
src/backend/: pyproject.toml  requirements.txt  test.py
src/backend/ai/: __init__.py  ai_orchestrator.py
src/backend/ai/cleaner/: __init__.py  cleaner_chain.py
src/backend/ai/flashcarder/: __init__.py  flashcarder_chain.py
src/backend/models/: __init__.py  cleaner_output.py  flashcarder_output.py  user_form.py
src/backend/parsers/: __init__.py  base_parser.py  docx_parser.py  pdf_parser.py  pptx_parser.py  txt_parser.py
src/backend/prompts/: __init__.py  human_prompts.py
src/backend/prompts/human/: __init__.py  cleaner_human.py  flashcarder_human.py
src/backend/prompts/system/: __init__.py  cleaner_system.py  flashcarder_system.py
src/backend/static/: StrategyPatternInClassExercise.txt  cleaned_text.txt  flashcarder_output.txt
src/backend/test_data/: __init__.py  load_test_data.py  test_cleaner.py  test_flashcarder.py  test_input.py  test_orchestrator.py  test_parsing.py
test_files/: flashcards_output.txt  sample.docx  sample.txt
(+15 files in other folders)
